--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -298,12 +298,12 @@ section {
                         transition: all .4s ease-in-out;
                         width: 60%;
                     }
-                    .html { width: 80%; }
-                    .css { width: 95%; }
-                    .js { width: 75%; }
-                    .react{ width: 60%; }
-                    .node{ width: 87%; }
-                    .python{ width: 70%; }
+                    .html { width: 50%; }
+                    .css { width: 50%; }
+                    .js { width: 60%; }
+                    .angular{ width: 60%; }
+                    .vue{ width: 50%; }
+                    .java{ width: 50%; }
                 }
             }
         }
